--- a/app/index.html
+++ b/app/index.html
@@ -1202,7 +1202,7 @@
           <div v-list>
             <blockquote>
               <p>Contribute to sustainable UX</p>
-              <p>Increase duration, stagger more, soften copy, & release tension</p>
+              <p>increase duration, stagger more, soften tone, & release tension</p>
               <footer>argyleink</footer>
             </blockquote>
           </div>
