--- a/app/index.html
+++ b/app/index.html
@@ -608,7 +608,7 @@
           <div v-list>
             <h2 class="text_color-1">Yoga App</h2>
             <h3>audibally soft</h3>
-            <button style="margin-top:5vmax;">Play Clip</button>
+            <audio src="./videos/yoga-calm.m4a" controls></audio>
           </div>
         </slyd>
 
