animation on final slide

--- a/app/index.html
+++ b/app/index.html
@@ -1144,7 +1144,7 @@
 
       <slyds>
 
-        <slyd id="conclusion-recap">
+        <slyd id="recap">
           <div v-list>
             <h1>Wrap Up</h1>
             <h3>Time to conclude our time about time</h3>
@@ -1211,7 +1211,7 @@
         <slyd id="end">
           <div v-list>
             <h1>Thank You</h1>
-            <h1>💀🤘</h1>
+            <h1><span rock-hand>🤘</span>💀<span rock-hand>🤘</span></h1>
           </div>
         </slyd>
 
