--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="mobile-web-app-capable" content="yes">
+    <link rel="apple-touch-icon" href="/images/apple-touch-icon.png" />
     <meta name="theme-color" content="#111212">
     <meta name="description" content="">
     <link rel="manifest" href="manifest.json">
